sending my file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal-Portfolio-sumon</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Portfolio</h1>
+        <div class="grid-container">
+            <div class="header-left-part">
+                <h1>welcome To</h1>
+                <h1><span class="name-highlight">Sumon</span> Website</h1>
+                <h3>world class professional web developer</h3>
+                <p>i am a front-end developer.i am curious for learning new things.
+                    new things always attract me.i am fond of loving coding.
+                </p>
+                <button type="button" class="header-btn">Hire Me</button>
+            </div>
+            <div class="header-right-part">
+                    <img  src="img/jhankar.png" alt="Header-Image">
+            </div>
+        </div>
 </body>
 </html>
