sending my main file

--- a/index.html
+++ b/index.html
@@ -19,10 +19,44 @@
                 <p>i am a front-end developer.i am curious for learning new things.
                     new things always attract me.i am fond of loving coding.
                 </p>
-                <button type="button" class="header-btn">Hire Me</button>
+                <button type="button" class="header-btn"><a href="#">Hire Me</a></button>
             </div>
             <div class="header-right-part">
                     <img  src="img/jhankar.png" alt="Header-Image">
+            </div>
+        </div>
+        <div class="grid-container-1">
+            <div class="second-part-img">
+                <img src="img/jhankar2.png" alt="big-dream">
+            </div>
+            <div class="second-part-right-part">
+                <h1>Dream Big</h1>
+                <h2>Become a Web developer</h2>
+                <p>i have already learned the basic of html,css,boostrap,javascript,react,node.js,mongoDb.
+                    now i am basic level web developer.but i am learning inter mediate tropics.
+                </p>
+                <button  type="btn" class="resume-btn"><a href="#">DOWNLOAD RESUMNE</a></button>
+            </div>
+        </div>
+
+
+        <div class="grid-container-2">
+            <div class="full-stack-developer">
+                <h1>Full Stack Web Developer</h1>
+                <h2>2023-Present,Pro Level Developer</h2>
+                <p>I am The Master Of HTML,CSS,and Javascript,I know Everything Needed To Make A Website,
+                    Function,Efficient.I Didn't Stop With The Web.I Went Beyond With The Most Popular Javascript
+                    Framework called react js.i even know the deployment,server and security.i will give you 100%
+                    web solution
+                </p>
+            </div>
+            <div class="baby-developer">
+                <h1>Baby Developer</h1>
+                <h2>2021-2022 Programming Hero Learner</h2>
+                <p>they didn't offer me a job.but i made mysely as a remote web developer.
+                    i made their website & showed to them.they like it & uploaded the content.
+                    it was fun working of programming hero.
+                </p>
             </div>
         </div>
 </body>
